Renamed the website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="content">
 
-    <h1>The Great Replacer</h1>
+    <h1>Module Replacer</h1>
     <section>
         <p>
             Replaces course codes with course names for exporting the Minerva timetable to other calendars.
@@ -33,7 +33,7 @@
         </p>
         <img src="img/before.png">
         <p>
-            The Great Replacer can replace these module codes with the actual module names for you (e.g. COMP1711 is
+            This Module Replacer can replace these module codes with the actual module names for you (e.g. COMP1711 is
             replaced by "Procedural Programing"). It's a really simple tool, but I needed it badly.
         </p>
         <img src="img/after.png">
