--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Replacer</title>
+    
+    <META NAME="author" CONTENT="Reinis Mazeiks">
+    <META NAME="Description" CONTENT="Online tool to replace module codes with names">
+    <META NAME="Classification" CONTENT="Online tool to replace module codes with names in a callendar file, in iCal (ics) format for the University of Leeds modules.">
+    <META NAME="Keywords" CONTENT="module, replacer, leeds, university of leeds, calendar, timetable, automatic, lectures, classes, university">
+    <META NAME="Geography" CONTENT="Leeds">
+    <META NAME="Language" CONTENT="English">
+    <META NAME="distribution" CONTENT="Global">
+    <META NAME="country" CONTENT="UK">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts.css">
